--- a/hardware/6502/atari2600.org
+++ b/hardware/6502/atari2600.org
@@ -1,5 +1,16 @@
+- wiki https://en.wikipedia.org/wiki/Atari_2600
+- wiki TIA https://en.wikipedia.org/wiki/Television_Interface_Adaptor
+- wiki hardware https://en.wikipedia.org/wiki/Atari_2600_hardware
+- pics hardware http://www.gametechwiki.com/w/index.php/Atari_2600_Hardware
+
 - zines: https://www.atarimania.com/list-atari-magazines.html
 - https://bataribasic.com/
+- https://8bitworkshop.com/docs/platforms/vcs/index.html
+- https://evoniuk.github.io/posts/pitfall.html
+- https://forums.atariage.com/topic/353031-lisp-programming-homebrew-wip/
+  https://github.com/DChristianson/vcs-lisp
+- http://www.neocomputer.org/projects/et/
+- https://www.bigmessowires.com/2023/01/11/atari-2600-hardware-design-making-something-out-of-almost-nothing/
 
 - video 18 | Atari 2600 VCS Programming | Computerphile https://www.youtube.com/watch?v=fce39nQm9TY
 - video 24 | Atari 2600 Programming is a NIGHTMARE | truttle1 https://www.youtube.com/watch?v=-l18Rwbinp8
@@ -7,9 +18,9 @@
 * Hardware
 
 |-------------+---------------+----------------|
-| ROM         | 4k            | Game cartridge |
-| RAM         | 128 bytes     | 6532 RIOT Chip |
 | CPU         | 1.19 MHz      | 6507 processor |
+| RAM         | 128 bytes     | 6532 RIOT Chip |
+| ROM         | 4kB           | Game Cartridge |
 | Audio/Video |               | TIA Chip       |
 | Input       | 2 controllers |                |
 | Output      | RCA           | NTSC/PAL/SECAM |
@@ -17,38 +28,50 @@
 
 TIA  = Television Interface Adapter
 RIOT = Ram IO Timer
-Schematics: https://www.atariage.com/2600/archives/schematics/images/Schematic_Atari2600_2000.png
+
+Schematics:
+https://www.atariage.com/2600/archives/schematics/index.html
 
 - 6507
   - Cheaper than 6502
   - 28 pin package
-    - axed A15-A13
-    - axed IRQ
-    - axed NMI
+    - axed pin A15-A13 (13 bit addressable memory)
+    - axed pin IRQ
+    - axed pin NMI
+    - other stuff?
 
-- TIA
+- TIA (custom chip)
   - NTSC: CO104444D
-  - PAL: CO11903
+  - PAL:  CO11903
 
 * Course: Learn Assembly by Making games for the Atari 2600
 
 source: https://github.com/gustavopezzi/atari2600course
 
+** 2 Hardware Architecture
+
 - Atari
-  - 1972 founded
-    1975 console
+  - 72 company founded
+  - 75 sale, console based on programmable design
 
 - Arcade Games: Pong, Tank
   - Common Themes
     - player 1, 2
     - scoreboard
     - ball/missile
-    - playing field
+    - playing field (arena,obstacles)
     - collision
 
-- MOS 6502
-  - picked over Intel 8080 and Motorola 6800
+- MOS 6502 (CPU picked)
+  - picked over "Intel 8080" and "Motorola 6800"
   - due price
   - was bought by Commodore before release
 
 - course uses NTSC for the TIA chip
+
+- on a byte there is a
+  - LSB (least significant bit) the rightmost bit
+  - MSB (most significant bit) the leftmost bit
+
+- We used to use =base 12= to count (egyptians/babylonians)
+  - why? we used the in-between phalanges on the fingers to count
