--- a/languages/tcl/tcl.org
+++ b/languages/tcl/tcl.org
@@ -2,6 +2,11 @@
   - Author: John Ousterhout
   - 1988-
 
+- https://wiki.tcl-lang.org/page/Who+Uses+Tcl
+- Used in F5's BIG-IP iRules https://my.f5.com/manage/s/article/K6091
+  - TCL version 8.4.6
+  - https://clouddocs.f5.com/api/irules/
+
 - yasnippets https://github.com/yangwen0228/unimacs/tree/bbeb3195000d8c1fd8ba436b47aa65d868769206/utils/snippets/tcl-mode
 
 * Language
