--- a/languages/tcl/videos.org
+++ b/languages/tcl/videos.org
@@ -1,3 +1,4 @@
+- 22 Coding Live: Advent of Code with iRules https://www.youtube.com/watch?v=Rnw7lUU8KpY
 - 21 | Simple Calculator using TCL/TK  https://www.youtube.com/watch?v=q7Zjy0tATW4
 - https://www.youtube.com/@alexbakeredu
 - Learning TCL https://www.youtube.com/watch?v=jf0PynxBSOg
