--- a/programming.org
+++ b/programming.org
@@ -1,3 +1,7 @@
+- video 21: What have we lost? https://www.youtube.com/watch?v=7RNbIEJvjUA
+- video 87: Doing with Images Makes Symbols | Alan Kay
+  https://www.youtube.com/watch?v=_oGq1RcM8B0
+  https://www.youtube.com/watch?v=4ffAkshf2n8
 - Zine: Amazing https://archive.org/details/amazing-computing-magazine?page=2
 - Zine: "RUN" https://archive.org/details/run-magazine?page=3
 - Zine: "Dr. Dobb's Journal" https://archive.org/search?query=creator%3A%22Dr.+Dobb%27s+Journal%22
