--- a/languages/ruby/libraries.org
+++ b/languages/ruby/libraries.org
@@ -1,3 +1,3 @@
-- libraries
-  - https://rubygems.org/
-  - docs 3rd party libs https://rubydoc.info/
+- libraries https://rubygems.org/
+- libraries https://github.com/markets/awesome-ruby
+- docs 3rd party libs https://rubydoc.info/
